--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "waimai-web",
   "version": "0.1.0",
-  "private": true,
+  "private":false,
   "scripts": {
+    "start": "npm run dev",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "node build/build.js",
+    "lint": "vue-cli-service lint",
+    "dev":"webpack-dev-server --inline --progress --config build/webpack.dev.conf.js"
+
   },
   "dependencies": {
     "bulma": "^0.7.1",
